<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.8.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>kubernetes-config</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>kubernetes</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<java.version>1.8</java.version>
        <docker-registry>registry.hub.docker.com/jsa4000/</docker-registry>
        <docker-prefix>spring-boot-</docker-prefix>
		<jib-maven-plugin.version>1.2.0</jib-maven-plugin.version>
		<openapi-jackson-nullable.version>0.2.0</openapi-jackson-nullable.version>
		<openapi-generator-maven-plugin.version>4.1.2</openapi-generator-maven-plugin.version>
		<spring-cloud-kubernetes.version>1.0.3.RELEASE</spring-cloud-kubernetes.version>
		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
		<springfox-swagger2.version>2.9.2</springfox-swagger2.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-kubernetes-dependencies</artifactId>
				<version>${spring-cloud-kubernetes.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>${openapi-jackson-nullable.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox-swagger2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<executions>
						<execution>
							<id>repackage</id>
							<goals>
								<goal>repackage</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.openapitools</groupId>
					<artifactId>openapi-generator-maven-plugin</artifactId>
					<version>${openapi-generator-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>generate-api</id>
							<goals>
								<goal>generate</goal>
							</goals>
							<configuration>
								<inputSpec>${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
								<generatorName>spring</generatorName>
								<apiPackage>${project.groupId}.${project.name}.web.api</apiPackage>
								<modelPackage>${project.groupId}.${project.name}.web.api.model</modelPackage>
								<modelNameSuffix>Dto</modelNameSuffix>
								<supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
								<configOptions>
									<delegatePattern>true</delegatePattern>
								</configOptions>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
					<executions>
						<execution>
							<id>publish-openapi-definition</id>
							<phase>generate-resources</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>
							<configuration>
								<outputDirectory>${project.basedir}/target/classes/public</outputDirectory>
								<resources>
									<resource>
										<directory>src/main/resources/swagger</directory>
										<filtering>true</filtering>
									</resource>
								</resources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<version>${jib-maven-plugin.version}</version>
					<configuration>
						<from>
							<image>openjdk:8-jre-alpine</image>
						</from>
						<to>
							<image>${docker-registry}${docker-prefix}${project.artifactId}</image>
							<tags>
								<tag>${project.version}</tag>
								<tag>latest</tag>
							</tags>
						</to>
						<container>
							<ports>
								<port>8080</port>
							</ports>
							<jvmFlags>
								<jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
								<jvmFlag>-XX:+UseCGroupMemoryLimitForHeap</jvmFlag>
								<jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>
								<jvmFlag>-XX:MaxRAMFraction=2</jvmFlag>
							</jvmFlags>
							<environment>
								<SPRING_OUTPUT_ANSI_ENABLED>ALWAYS</SPRING_OUTPUT_ANSI_ENABLED>
							</environment>
							<labels>
								<owner>${project.groupId}</owner>
								<version>${project.version}</version>
								<timestamp>${maven.build.timestamp}</timestamp>
							</labels>
							<useCurrentTimestamp>true</useCurrentTimestamp>
						</container>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>local</id>
		</profile>
		<profile>
			<id>k8s</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-starter-kubernetes-config</artifactId>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>
